styles.css
/* ----------------- RESET THE DEFAULT PADDING/MARGINS ---------------- */
* {
    margin: 0;
    padding: 0;
    /* box-sizing: border-box; */
}

html {
    font-size: 16px;
}

body {
    font-family: "Open Sans", sans-serif;
    -webkit-font-smoothing: antialiased;
    margin: 0;
    letter-spacing: .02em;
}

/* ----------------- SETTING THE VIEWPORT ---------------- */
@viewport {
    width: device-width;
    zoom: 1.0;
}
@-ms-viewport {
    width: device-width;
}

/* ----------------- RESPONSIVE IMAGES ---------------- */
img {
    max-width: 100%;
}

/*------------- TYPOGRAPHY ---------------------- */
h1, h2, h3, h4 {
    font-family: "Playfair Display", serif;
    font-weight: bold;
}

p, ul, li {
    font-family: 'Open Sans', sans-serif;
    text-transform: none;
    line-height: 1.4;
};

a {
    font-family: 'Open Sans', sans-serif;
    text-decoration: none;
    color: inherit;
    font-weight: 600;
    transition: all .5s ease-in-out;
    text-transform: none;
}

a:hover {
    color: red;
}

/*----- OVERALL DESIGN -------*/ /*----- OVERALL DESIGN -------*/


img, h3, h5, a {
    margin: 1em;  
    width: 50em;
    text-align: center;
    padding: .5em;
}

p {
    text-align: justify;
    width: 50em;
    margin-top: 1.5em;
}


/*----- LAYOUT -------*/  /*----- LAYOUT -------*/



/*----- HEADER -------*//*----- HEADER -------*/
/*----- HEADER -------*//*----- HEADER -------*/
/*----- HEADER -------*//*----- HEADER -------*/
/*----- HEADER -------*//*----- HEADER -------*/
 /* CAROUSEL  */
* {box-sizing: border-box}

 /* CONTAINER */
 .slideshow-container {
     max-width: 100%;
     position: relative;
     margin: 0;
     max-height: 100vh;
 }

 /* HIDE THE IMAGES BY DEFAULT */
 .myslides {
     display: none;
 }

/* CAPTION TEXT */
.text {
    color: #f2f2f2;
    font-size: 15px;
    padding: 8px 12px;
    position: absolute;
    bottom: 8px;
    width: 100%;
    text-align: center;
}

/* NUMBER TEXT (1/4 etc) */
.numbertext {
    color: #f2f2f2;
    font-size: 12px;
    padding: 8px 12px;
    position: absolute;
    top: 0;
}

 /* DOTS AND BULLETS INDICATORS */
 .dot {
     cursor: pointer;
     height: 15px;
     width: 15px;
     margin: 0 2px;
     background-color: #bbb;
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
 }

 .active, .dot:hover {
     background-color: #717171;
 }

 /* FADING ANIMATION */
 .fade {
     -webkit-animation-name: fade;
     -webkit-animation-duration: 1.5s;
     animation-name: fade;
     animation-duration: 1.5s;
 }

 @-webkit-keyframes fade {
     from {opacity: .4}
     to {opacity: 1}
 }

 @keyframes fade {
     from {opacity: .4}
     to {opacity: 1}
 }



/* NAV BAR */
.fas {
    font-size: 32px;
    color: white;
}



/*----- PORTFOLIO -------*/
/*----- PORTFOLIO -------*/
/*----- PORTFOLIO -------*/
* {
    margin: 0;
    padding: 0;
}

.portfolio { grid-area: "portfolio"; background: grey }
.aboutContactTest { grid-area: "aboutContactTest"; background: yellow }

.mainGrid { /* MAIN DOCUMENT WRAPPER */
    display: grid;
    width: 100%;
    grid-gap: 1em;
    grid-template-areas:
    
      "portfolio"
      "aboutContactTest";
    align-items: center;
}

.container {
    display: block;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    padding: 1em;
    margin: 2em;
}
  /* PORTFOLIO WRAPPER */
  #proj0 { grid-area: "proj0"; background: lightblue }
  #proj1 { grid-area: "proj1"; background: lightpink }
  #proj2 { grid-area: "proj2"; background: lightyellow}
  #proj3 { grid-area: "proj3"; background: lightgreen }
 
  .portfolio {
    /* padding: 10px; */
    display: grid;
    /* height: 100vh; */
    width: 100%;
    grid-gap: 2em;
    grid-template-areas:
      "proj0 proj1"
      "proj2 proj3";
    align-items: center;
  }
  
  .box {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    padding: 1em;
    margin: 2em;
  }
  
/*----- ??? -------*/  /*----- ??? -------*/

/* ABOUT / SKILLS / CONTACT / TESTIMONIALS WRAPPER */
#about { grid-area: "about"; background: lightblue; height: 25em }
#skills { grid-area: "skills"; background: lightpink; height: 25em }
#contact { grid-area: "contact"; background: lightyellow; height: 25em}
#test { grid-area: "test"; background: lightgreen; height: 25em }

.aboutContactTest {
  /* padding: 10px; */
  display: grid;
  border: 1px solid black;
  grid-gap: 2em;
  grid-template-areas:
    "about skills"
    "contact test";
  align-items: center;
}

.box2 {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  padding: 1em;
  margin: 1em;
}

.about, .contact {
  margin: 1em;  
  width: 50em;
  text-align: left;
  padding: 1em;
  
}

.skills, .test {
  margin: 1em;  
  width: 50em;
  text-align: center;
  padding: 1em;
  font-style: regular;
}

/* ABOUT/SKILLS CONTACT/TESTIMONIALS STYLING  */


ul {
  list-style: none;
  font-size: 1.5em;
}
.ref {
  text-align: right;
  margin: .5em;
}
h2 {
  padding: 1.5em 0 0;
}


/* ********************* BOTTOM NAV BAR ************************/
/* Place the navbar at the bottom of the page, and make it stick */
.nav {
    font-family: "Open Sans", sans-serif;
    background: white;
    position: fixed;
    bottom: .5px;
    width: 100%;
    color: teal;
    display: flex;
    flex-direction: row;
    align-content: flex-end;
    font-weight: bold;
    font-size: 1.25em;
    margin: 1.5em 0 0;
}
.nav a {
    text-decoration: none;
    color: inherit;
}
.copyright {
    text-align: left;
    color: teal;
    font-size: 1.25em;
    padding: 1.5em;
    bottom: 0;
    position: fixed;
    float: left;
    width: 100%;
}

/* Style the links inside the navigation bar */


/* Change the color of links on hover */
/* #footerBar a:hover {
    background-color: #ddd;
    color: yellow;
} */

/* Add a color to the active/current link */
/* #footerBar a.active {
    background-color: red;
    color: white;
} */

